Add example of array modification

--- a/_Native-C#/Native-C#.csproj
+++ b/_Native-C#/Native-C#.csproj
@@ -6,7 +6,8 @@
     <RootNamespace>Native_CSharp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishAot>true</PublishAot>
+    <PublishAOT>true</PublishAOT>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
